# hackaton-frontend

./: Dockerfile  frontend.py  getinputpage.html  pdfresult.html  pyproject.toml
